--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.5.2</version>
-            <scope>provided</scope>
+            <version>2.6.2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
@@ -51,13 +51,44 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-        <!--Maven error raro -->
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
-            <version>2.26-b01</version>
-            <scope>runtime</scope>
-        </dependency>
+       
+
+
+ <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa</artifactId>
+            <version>2.5.2</version>
+     <type>jar</type>
+ </dependency>
+        
+    <dependency>
+    <groupId>org.eclipse.persistence</groupId>
+    <artifactId>org.eclipse.persistence.nosql</artifactId>
+    <version>2.5.0-RC2</version>
+</dependency>
+      
+      <dependency>
+          <groupId>jboss</groupId>
+          <artifactId>jboss-j2ee</artifactId>
+          <version>4.2.2.GA</version>
+      </dependency>
+        
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>2.11.1</version>
+      </dependency>
+      
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+	  <artifactId>commons-fileupload</artifactId>
+	  <version>1.3</version>
+      </dependency>
+
+
+
+
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
