--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,34 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.6.2</version>
-            <type>jar</type>
+            <version>2.6.4</version>
         </dependency>
+        <dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.11.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.nosql</artifactId>
+			<version>2.4.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.resource</groupId>
+			<artifactId>connector-api</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<!-- Testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.5.2</version>
+            <version>2.5.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -55,30 +76,18 @@
 
 
  <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>2.5.2</version>
-     <type>jar</type>
- </dependency>
-        
-    <dependency>
     <groupId>org.eclipse.persistence</groupId>
-    <artifactId>org.eclipse.persistence.nosql</artifactId>
-    <version>2.5.0-RC2</version>
+    <artifactId>org.eclipse.persistence.jpa</artifactId>
+    <version>2.5.0</version>
 </dependency>
+
       
       <dependency>
           <groupId>jboss</groupId>
           <artifactId>jboss-j2ee</artifactId>
           <version>4.2.2.GA</version>
       </dependency>
-        
-      <dependency>
-          <groupId>org.mongodb</groupId>
-          <artifactId>mongo-java-driver</artifactId>
-          <version>2.11.1</version>
-      </dependency>
-      
+
       <dependency>
           <groupId>commons-fileupload</groupId>
 	  <artifactId>commons-fileupload</artifactId>
@@ -150,5 +159,12 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+		<repository>
+			<id>EclipseLink Repo</id>
+			<name>EclipseLink Repository</name>
+			<url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
+		</repository>
+	</repositories>
 
 </project>
